# mechanics-of-terrain-model-shaping

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.cpp
Shaders/: CMakeLists.txt  ShaderManager.cpp  ShaderManager.hpp
Stages/: Button.cpp  Button.hpp  CMakeLists.txt  Menu.cpp  Menu.hpp  Options.hpp  Presentation.cpp  Presentation.hpp  PresentationVoxel.cpp  PresentationVoxel.hpp  Rain.cpp  Rain.hpp  Skybox.cpp  Skybox.hpp  Skydome.cpp  Skydome.hpp  Stage.cpp  Stage.hpp  StageManager.cpp  StageManager.hpp  StageSetter.hpp  Terrain.cpp  Terrain.hpp  Water.cpp  Water.hpp  World.cpp  World.hpp
Stages/UserInterface/: UserInterface.cpp  UserInterface.hpp
Stages/UserInterface/Button/: Button.cpp  Button.hpp
Stages/UserInterface/Element/: Element.cpp  Element.hpp
shaders/: chunk.fs  chunk.vs  mesh.tc  mesh.te  mesh.vs  particle.vs  rain.fs  rain.gs  rain.vs  simply.fs  simply.vs  terrain.fs  userInterface.vs  water.fs  water.gs  water.te
